# testapp

./: Cargo.toml  README.md
client/: nuxt.config.js
migrations/2020-07-01-003551_create_articles/: up.sql
migrations/2020-07-01-003551_create_posts/: up.sql
migrations/2020-07-06-130834_create_relations/: down.sql  up.sql
migrations/2020-07-07-025215_create_astocks_info/: down.sql  up.sql
src/: main.rs  schema.rs
src/common/: config.rs  const_types.rs  event_types.rs  market_types.rs  mod.rs  relation_types.rs  schema.rs  section_types.rs  status_type.rs
src/db/: article.rs  astocks.rs  mod.rs
src/models/: article.rs  mod.rs  stock_info.rs
src/routes/: article.rs  market.rs  mod.rs
web/: README.md  nuxt.config.js  package-lock.json  package.json
web/components/site/: navbar.vue
web/components/tradingview/: index.vue
web/components/tradingview/datafeeds/: dataUpdater.js  datafeeds.js  socket.js
web/pages/: index.vue
web/pages/article/: _slug.vue
web/pages/markets/: index.vue
web/pages/page/: _slug.vue
web/plugins/: blog-system.js
