[package]
name = "testapp"
version = "0.1.0"
authors = ["Cheney <wyqxiaoxyz@gmail.com>"]
edition = "2020"

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]