[package]
name = "testapp"
version = "0.1.0"
authors = ["Cheney <wyqxiaoxyz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
slug = "0.1.4"
rand = "0.7.2"
validator = "0.10.0"
validator_derive = "0.10.0"
enum_str = "0.1.2"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "diesel_postgres_pool"]